Added TOC entries

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -303,6 +303,7 @@ Sébastien Fauvel
 \mainmatter
 
 \chapter*{History of this book}
+\addcontentsline{toc}{chapter}{\protect History of this book}
 
 \renewcommand{\epigraphwidth}{8.3cm}
 \epigraph{For one of the most stringent tests of any physical theory is the prediction of its own creation process.}{Sébastien Fauvel,\\\textit{Quantum Ethics}~\cite{Fauvel2013}}
@@ -322,22 +323,27 @@ As soon as I had developed this Spinozist model of the mental world (which build
 In the end, the model I'm proposing can be roughly described in very simple terms: A subjective mental state is being experienced collectively while the quantum state is undergoing an elementary unitary evolution, then a new mental state is being randomly moved to as the quantum state gets projected to the corresponding subspace, an so on. It almost sounds trivial to me, so I guess I'm eventually understanding Quantum Physics, at least in this form. This alone would be a revolution in this field of science. But I'm not interested in pretending to have discovered deep truths about ``the inmost force which binds the world'', to speak with Goethe; I just wanted to show that it is possible, and actually quite easy, to give Quantum Field Theory a form and an interpretation which make it a formally and conceptually closed theory, capable of giving a well-defined answer to any question we can ask it -- even if we may eventually find out that it wasn't the right one. This interpretation challenges all existing ones insofar as it is the first time that this degree of conceptual precision and formal well-definedness has been reached, and I hope this will be motivation enough for others to work out alternative interpretations and achieve the sane level of quality -- so that we can finally know what Quantum Theory is actually about...
 
 \chapter*{Introduction}
+\addcontentsline{toc}{chapter}{\protect Introduction}
 
 \section*{Interpreting Quantum Field Theory}
+\addcontentsline{toc}{section}{\protect Interpreting Quantum Field Theory}
 
 The birth of Quantum Physics in the 1920s has been marked by a long period of intense controversies about its interpretation, which has been recently reviewed by Juan Miguel Marin in his paper \textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}~\cite{Marin2009}. The Copenhagen interpretation which emerged from these debates is dominating the scene since the 1950s-1960s, certainly not because it is intrinsically better than others, but because it seems to challenge the materialist world view of classical, `everyday' physics as little as possible. Since the 1970s, however, numerous alternative interpretations have been proposed and further developed: Pilot-Wave Theory, Dynamical Collapse Theories, Many-Worlds interpretation, Many-Minds interpretation, Decoherent Histories... All these attempts to give Quantum Physics a sound interpretation are facing the problem that the mathematical theory itself, in the form of the Standard Model of Quantum Field Theory (or of slight variants regarding the existence of the Higgs field, of neutrino masses...), is still ill-defined, and that it is therefore impossible to assign a physical or metaphysical meaning to the fundamental mathematical entities of the theory, i.e. to define an ontology. Of course, it is possible to choose a specific, mathematically well-defined regularization of the theory for this purpose, but since renormalization methods are leading, in the singular limit of the original theory, to the same results for different regularization schemes, we don't know which regularization is the right one, and as a consequence we don't know either which are the fundamental mathematical entities to be interpreted. Quite surprisingly, however, it seems that this issue has never been seriously accounted for yet. Existing interpretations of Quantum Physics are either restricted to non-relativistic Quantum Mechanics, which is no fundamental theory, or are formulated so vaguely that they are hardly more than the mere idea of an interpretation, which has made many physicists doubt that such an interpretation is possible at all. This book will have reached his goal if it convinces the reader of the contrary and helps interpretation issues recovering again their place at the heart of the research on Quantum Field Theory. For this purpose, I shall take as an example a lattice regularization scheme, formulate in this well-defined framework a rather conservative interpretation inspired by Spinoza's philosophy and show that classical philosophical questions can be formulated as simple physical hypotheses in the frame of the resulting naturalistic metaphysics.
 
 \section*{Philosophical motivation}
+\addcontentsline{toc}{section}{\protect Philosophical motivation}
 
 Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of Physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues, describe very precisely the form of the relation between mind and body according to Quantum Physics and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
 
 \footnotetext[1]{Precisely, one requires that the classical Lagrangian used in the heuristical construction of the theory be Poincaré invariant and describes local (contact) interactions of point particles in the Minkowski space-time.}
 
 \section*{Abstract}
+\addcontentsline{toc}{section}{\protect Abstract}
 
 In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a physical and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens in the physical world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This physical world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this physical world is given by a quantum superposition of so-called localized states, which are given by the number of elementary particles of each kind present at each point of space. Each physical state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the physical world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final physical state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the physical state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding physical states, e.g. the biological processes of consciousness within a human brain.
 
 \section*{Overview}
+\addcontentsline{toc}{section}{\protect Overview}
 
 This book begins in chapter \ref{Quantum fields} with the formulation of a mathematically well-defined frame for any theory of mutually interacting quantum fields of point particles. Well-definedness is achieved by making sure that the Hamilton space of the quantum states is finite dimensional, so that the Hamiltonian evolution is trivially well-defined for any interaction Hamiltonian. The ``ingredients'' of this mathematical frame are already well-known in Quantum Field Theory: Space is supposed to have the structure of a finite three dimensional lattice, the definition of the kinetic energy Hamiltonian making use of the SLAC derivative, and the occupation number of single modes of the particle fields is supposed to be bounded for bosons as well as for fermions.
 
