Created a Kile project and moved front matter to separate files

--- a/contents.tex
+++ b/contents.tex
@@ -1,301 +1,14 @@
-\documentclass[10pt,a4paper,twoside,openany]{book}
-\usepackage{etoolbox}
-\usepackage{emptypage}
-\pagestyle{myheadings}
-\patchcmd{\chapter}{\thispagestyle{plain}}{\thispagestyle{myheadings}}{}{}
-\patchcmd{\part}{\thispagestyle{plain}}{\thispagestyle{empty}}{}{}
-\let\stdpart\part\renewcommand*\part{\cleardoublepage\stdpart}
-\usepackage[paperwidth=6in,paperheight=9in,top=19mm,bottom=10mm,outer=10mm,inner=14mm,pdftex]{geometry}
-\usepackage[utf8]{inputenc}
-\usepackage[american]{babel}
-\usepackage{lmodern}
-\usepackage[T1]{fontenc}
-\usepackage[pdftex,pdfauthor=Sébastien\ Fauvel,pdftitle=Quantum\ Ethics:\ A\ Spinozist\ Interpretation\ of\ Quantum\ Field\ Theory]{hyperref}
-\usepackage{appendix}
-%\usepackage{makeidx}
-\usepackage{latexsym}
-\usepackage{amssymb}
-\usepackage{amsmath}
-\usepackage{amsbsy}
-\usepackage{mathbbol}
-\usepackage[pdftex]{graphicx}
-\usepackage{flafter}
-\usepackage{epigraph}
-\renewcommand{\thefootnote}{\fnsymbol{footnote}}
-%\makeindex
-\setlength{\parskip}{2pt}
-
-\begin{document}
-
-% Layout elements
-\newcommand{\paragraphtitle}[1]{\textsc{#1}\ } % Paragraph title
-
-% Physical constants
-\renewcommand{\c}{\mathrm c} % Speed of light
-\newcommand{\h}{\mathrm h} % Plank constant
-\newcommand{\G}{\mathrm G} % Gravitational constant
-\newcommand{\RH}{\mathrm {R_H}} % Hubble radius
-\newcommand{\e}{\mathrm e} % Elementary electric charge
-\newcommand{\vpty}{\mathrm \varepsilon_0} % Permittivity of the bare vacuum
-
-% Mathematical notations
-\let\minusplus\mp % Minus/plus
-\newcommand{\eqdef}{:=} % Equals by definition
-\newcommand{\IN}{\mathbb{N}} % Integers
-\newcommand{\IZ}{\mathbb{Z}} % Relative integers
-\newcommand{\IR}{\mathbb{R}} % Real numbers
-\newcommand{\IC}{\mathbb{C}} % Complex numbers
-\newcommand{\IntRange}[2]{\Lbrack{#1},{#2}\Rbrack} % Integer range
-\renewcommand{\exp}[1]{\mathrm{exp} \left( {#1} \right)} % Exponential function
-\renewcommand{\ln}[1]{\mathrm{ln} \left( {#1} \right)} % Logarithm function
-\renewcommand{\sin}[1]{\mathrm{sin} \left( {#1} \right)} % Sine function
-\renewcommand{\cos}[1]{\mathrm{cos} \left( {#1} \right)} % Cosine function
-\newcommand{\sinc}[1]{\mathrm{sinc} \left( {#1} \right)} % Cardinal sine function
-\newcommand{\esinc}[1]{\mathrm{esinc} \left( {#1} \right)} % Exponential cardinal sine function
-\renewcommand{\tan}[1]{\mathrm{tan} \left( {#1} \right)} % Tangent function
-\renewcommand{\arctan}[1]{\mathrm{arctan} \left( {#1} \right)} % Inverse tangent function
-\renewcommand{\i}{\mathrm{i}} % Imaginary unit
-\newcommand{\cc}[1]{\overline{#1}} % Complex conjugate
-\newcommand{\CC}{\mathrm{c.c.}} % Complex conjugate of preceding
-\newcommand{\FT}[1]{\widetilde{#1}} % Fourier transform
-\newcommand{\PV}{\mathrm{P.V.}} % Cauchy principal value
-\newcommand{\dx}{\mathrm dx} % Infinitesimal variation
-\newcommand{\dX}{\mathrm dX} % Infinitesimal variation
-\newcommand{\dt}{\mathrm dt} % Infinitesimal duration
-\newcommand{\dE}{\mathrm dE} % Infinitesimal energy
-\newcommand{\dnp}{\mathrm dp} % Infinitesimal momentum
-\newcommand{\dtp}{\mathrm d^3\p} % Infinitesimal 3-momentum
-\newcommand{\dtq}{\mathrm d^3\q} % Infinitesimal 3-wave vector
-\newcommand{\dO}{\mathrm d\Omega} % Infinitesimal solid angle
-\newcommand{\ddt}{\frac{\mathrm d}{\dt}} % Time derivative
-\newcommand{\Id}{\mathbb{1}} % Identity
-\renewcommand{\matrix}[1]{\begin{pmatrix} #1 \end{pmatrix}} % Matrix
-\newcommand{\operp}{\overset{\perp}{\oplus}} % Orthogonal direct sum
-
-% Delta functions
-\newcommand{\deltaX}[1]{\delta_{\sv x} \left({#1}\right)}
-\newcommand{\deltaE}[2]{\delta^{({#1})}_{t - t_0} \left({#2}\right)}
-
-% Minkowski space-time
-\newcommand{\ST}{\mathcal E} % Space-time
-
-\newcommand{\sv}[1]{\boldsymbol{#1}} % 3-vector
-\newcommand{\ssp}{\cdot} % Scalar product of 3-vectors
-\newcommand{\scp}{\times} % Cross product of 3-vectors
-\newcommand{\svc}[2]{{#1}_{#2}} % 3-vector component
-\newcommand{\norm}[1]{\|{#1}\|}
-
-\newcommand{\stv}[1]{\boldsymbol{#1}} % 4-vector
-\newcommand{\stsp}{\cdot} % Scalar product of 4-vectors
-\newcommand{\stvh}[2]{{#1}^{#2}} % Covariant 4-vector component
-\newcommand{\stvl}[2]{{#1}_{#2}} % Contravariant 4-vector component
-
-\newcommand{\stt}[1]{\boldsymbol{#1}} % 4-tensor
-\newcommand{\stthh}[3]{{#1}^{#2#3}} % Covariant 4-tensor component
-\newcommand{\sttll}[3]{{#1}_{#2#3}} % Contravariant 4-tensor component
-
-% Lattice parameters
-\newcommand{\N}{\mathrm N} % Lattice size
-\renewcommand{\a}{\mathrm a} % Lattice step
-\newcommand{\M}[1]{N_{#1}^{max}} % Maximum occupation number for a given particle type
-
-% Lattice notations
-\newcommand{\FL}{\IntRange{-\N}{\N}^3} % Lattice
-\newcommand{\FLD}{\left( \frac{\IntRange{-\N}{\N}}{1 + 2 \N} \right)^3} % Dual lattice
-\newcommand{\ILD}{\left( \frac{\IZ}{1 + 2 \N} \right)^3} % Infinite dual lattice
-\newcommand{\eqp}[1]{\underline{#1}} % Equivalent in the dual lattice
-\newcommand{\wl}[1]{\stv x_{#1}} % World line
-\newcommand{\wlt}[2]{\stv x_{#1}({#2})} % World line with proper time
-\newcommand{\wltp}[2]{{\stv x}'_{#1}({#2})} % World line with proper time in alternative reference frame
-
-% Hilbert spaces
-\newcommand{\bra}[1]{\left\langle{#1}\right|\ } % Bra
-\newcommand{\ket}[1]{\ \left|{#1}\right\rangle} % Ket
-\newcommand{\braket}[2]{\left\langle{#1}|{#2}\right\rangle} % Bracket
-\newcommand{\op}[1]{\widehat{#1}} % Linear operator
-\newcommand{\dop}[1]{\widehat{#1}^{\dagger}} % Dual operator
-\newcommand{\wf}[4]{{#1}^{#2}_{#3}\left({#4}\right)} % Wave function
-
-% Particle fields
-\renewcommand{\H}{\mathcal H} % Hilbert space
-\newcommand{\F}{\mathcal F} % Subspace of final states
-\newcommand{\Hn}[1]{\mathcal H_{#1}} % N particles Hilbert space
-\newcommand{\Hp}[1]{\mathcal H^{#1}} % One field Hilbert space
-\newcommand{\vac}{\Omega} % Vacuum
-\newcommand{\bX}[4]{{#1}^{#2}_{{#3}, {#4}}} % Position basis indices
-\newcommand{\ketX}[4]{\ket{\bX{#1}{#2}{#3}{#4}}} % Position basis ket
-\newcommand{\bFX}[4]{({#1}^{#2}_{{#3}, {#4}})} % Position basis field indices
-\newcommand{\ketFX}[4]{\ket{\bFX{#1}{#2}{#3}{#4}}} % Position basis field ket
-\newcommand{\bQ}[4]{{#1}^{#2}_{{#3}, {#4}}} % Wave number basis indices
-\newcommand{\ketQ}[4]{\ket{\bQ{#1}{#2}{#3}{#4}}} % Wave number ket
-\newcommand{\bFQ}[4]{({#1}^{#2}_{{#3}, {#4}})} % Wave number basis field indices
-
-% Particles
-\newcommand{\antiparticle}[1]{\overline{#1}} % Antiparticle notation
-\newcommand{\neutrino}[1]{\nu_{#1}} % Neutrino notation
-\newcommand{\antineutrino}[1]{\atiparticle{\nu}_{#1}} % Anti-neutrino notation
-
-\newcommand{\electron}{e} % Electron
-\newcommand{\positron}{\antiparticle \electron} % Positron
-\newcommand{\muon}{\mu} % Muon
-\newcommand{\antimuon}{\antiparticle \muon} % Anti-muon
-\newcommand{\tauon}{\tau} % Tauon
-\newcommand{\antitauon}{\antiparticle \tauon} % Anti-tauon
-
-\newcommand{\neutrinoelectron}{\neutrino \electron} % Neutrino electron
-\newcommand{\antineutrinoelectron}{\antineutrino \electron} % Anti-neutrino electron
-\newcommand{\neutrinomuon}{\neutrino \muon} % Neutrino muon
-\newcommand{\antineutrinomuon}{\antineutrino \muon} % Anti-neutrino muon
-\newcommand{\neutrinotauon}{\neutrino \tauon} % Neutrino tauon
-\newcommand{\antineutrinotauon}{\antineutrino \tauon} % Anti-neutrino tauon
-\newcommand{\quarkup}{u} % Quark up
-\newcommand{\antiquarkup}{\antiparticle \quarkup} % Anti-quark up
-\newcommand{\quarkcharm}{c} % Quark charm
-\newcommand{\antiquarkcharm}{\antiparticle \quarkcharm} % Anti-quark charm
-\newcommand{\quarktop}{t} % Quark top
-\newcommand{\antiquarktop}{\antiparticle \quarktop} % Anti-quark top
-\newcommand{\quarkdown}{d} % Quark down
-\newcommand{\antiquarkdown}{\antiparticle \quarkdown} % Anti-quark down
-\newcommand{\quarkstrange}{s} % Quark strange
-\newcommand{\antiquarkstrange}{\antiparticle \quarkstrange} % Anti-quark strange
-\newcommand{\quarkbottom}{b} % Quark bottom
-\newcommand{\antiquarkbottom}{\antiparticle \quarkbottom} % Anti-quark bottom
-
-\newcommand{\photon}{\gamma} % Photon
-
-% Operators
-\newcommand{\Rop}{\op{\sv r}} % Position operator
-\newcommand{\Pop}{\op{\sv p}} % Momentum operator
-\newcommand{\Hop}{\op{\mathrm H}} % Hamiltonian operator
-\newcommand{\HopQED}{\Hop'_{QED}} % QED Hamiltonian operator
-\newcommand{\Qop}[1]{\op{Q}_{#1}} % Electric charge operator
-\newcommand{\Jop}[1]{\op{\sv J}_{#1}} % Electric current operator
-\newcommand{\Vop}[1]{\op{V}_{#1}} % Electric potential operator
-\newcommand{\Aop}[1]{\op{\sv A}_{#1}} % Magnetic potential operator
-\newcommand{\Uop}[2]{\op{\mathrm U}({#1},{#2})} % Evolution operator
-\newcommand{\Um}[4]{\mathrm U_{{#1}{#2}}({#3},{#4})} % Evolution matrix
-\newcommand{\Uopn}[3]{\op{\mathrm U}^{({#1})}({#2},{#3})} % Evolution operator to the order n
-\newcommand{\Umn}[5]{\mathrm U_{{#1}{#2}}^{({#3})}({#4},{#5})} % Evolution matrix to the order n
-\newcommand{\UopK}[2]{\op{\mathrm U}_0({#1},{#2})} % Kinetic evolution operator
-\newcommand{\UopI}[2]{\op{\mathrm U}_\I({#1},{#2})} % Evolution operator in the interaction picture
-\newcommand{\UopIn}[3]{\op{\mathrm U}_\I^{({#1})}({#2},{#3})} % Evolution operator in the interaction picture to the order n
-\newcommand{\Sop}{\op{\mathrm S}} % Scattering operator
-\newcommand{\Sm}[2]{\mathrm S_{{#1}{#2}}} % Scattering matrix
-\newcommand{\Smn}[3]{\mathrm S_{{#1}{#2}}^{({#3})}} % Scattering matrix to the order n
-\newcommand{\Smp}[2]{\mathrm S^{(#1)}_{#2}} % Scattering matrix on a path
-\newcommand{\SmE}[2]{\mathrm S^{(#1)}_{t - t_0}\left({#2}\right)} % Scattering matrix on an energy path
-\newcommand{\aop}[3]{\op{a^{#1}}_{{#2}, {#3}}} % Annihilation operator
-\newcommand{\cop}[3]{\dop{a^{#1}}_{{#2}, {#3}}} % Creation operator
-\newcommand{\aAlg}{\mathcal A} % Algebra of the annihilation operators
-\newcommand{\cAlg}{\mathcal A^{\dagger}} % Algebra of the creation operators
-\newcommand{\Nop}[3]{\op{N^{#1}}_{{#2}, {#3}}} % Particle number operator
-\newcommand{\tSAop}[3]{\op{\sv{\psi}^{#1}}_{{#2}, {#3}}} % 3-Spinor annihilation operator
-\newcommand{\tSCop}[3]{\dop{\sv{\psi}^{#1}}_{{#2}, {#3}}} % 3-Spinor creation operator
-\newcommand{\SAop}[3]{\op{\psi^{#1}}_{{#2}, {#3}}} % 4-Spinor annihilation operator
-\newcommand{\SCop}[3]{\op{\overline \psi^{#1}}_{{#2}, {#3}}} % 4-Spinor creation operator
-\newcommand{\Faop}[3]{\op{\epsilon^{#1}}_{{#2}, {#3}}} % Fermion antisymmetrization operator
-\newcommand{\Pn}[2]{\pi^{#1}_{#2}} % Standard particle numbering function
-
-% Physical notations
-\newcommand{\pt}{\phi} % Placeholder particle type
-\newcommand{\ptf}{f} % Placeholder fermion particle type
-\newcommand{\n}{\sv n} % Placeholder position
-\newcommand{\q}{\sv q} % Placeholder wave number
-\renewcommand{\sp}{\lambda} % Placeholder spin state
-\newcommand{\p}{\sv p} % Placeholder 3-momentum
-\newcommand{\E}{E} % Placeholder energy
-\newcommand{\Ek}[2]{\E^{#1}_{#2}} % Kinetic energy
-\newcommand{\vk}[2]{\sv v^{#1}_{#2}} % Kinetic velocity
-\newcommand{\bkn}[2]{\beta^{#1}_{#2}} % Kinetic beta factor
-\newcommand{\bk}[2]{\sv \beta^{#1}_{#2}} % Kinetic beta vector
-\newcommand{\gk}[2]{\gamma^{#1}_{#2}} % Kinetic gamma factor
-\newcommand{\mk}[2]{\mathrm m^{#1}_{#2}} % Kinetic mass
-\newcommand{\mkn}[3]{\mathrm m^{#1 ({#3})}_{#2}} % Kinetic mass to the order n
-\renewcommand{\mp}[1]{\mathrm m_{#1}} % Rest mass of a bare particle
-\newcommand{\mpr}[1]{\mathrm M_{#1}} % Reduced rest mass of a bare particle
-\newcommand{\qp}[1]{\mathrm q_{#1}} % Electric charge of a dressed particle
-\newcommand{\Qp}[1]{\mathrm Q_{#1}} % Particle electric charge number
-\newcommand{\I}{I} % Interaction picture
-\newcommand{\TP}[2]{\mathcal P \left( {#1} \to {#2} \right)} % Transition probability
-\newcommand{\TPn}[3]{\mathcal P^{({#3})} \left( {#1} \to {#2} \right)} % Transition probability to the order n
-\newcommand{\CSn}[3]{\sigma^{({#3})} \left( {#1} \to {#2} \right)} % Cross section to the order n
-\newcommand{\V}{V} % Coulomb potential
-
-% Spinors
-\newcommand{\sigmat}[1]{\sigma_{#1}} % Pauli matrices
-\newcommand{\gammat}[1]{\gamma^{#1}} % Dirac matrices
-\newcommand{\gamvec}{\sv \gamma} % Dirac matrices 3-vector
-\newcommand{\dirspin}[3]{u^{#1}_{{#2}, {#3}}} % Dirac spinor
-\newcommand{\ddirspin}[3]{{u^{#1}}^{\dagger}_{{#2}, {#3}}} % Dual Dirac spinor
-\newcommand{\photonspin}[2]{\sv \varepsilon_{{#1},{#2}}} % Photon polarization vector
-\newcommand{\cphotonspin}[2]{\sv \varepsilon_{{#1},{#2}}^*} % Conjugate photon polarization vector
-
-% Mental notations
-\newcommand{\CMS}{\mathcal M} % Set of all collective mental states
-\newcommand{\ims}{\mathfrak{m}} % Placeholder individual mind state
-\newcommand{\cms}{\mathfrak{M}} % Placeholder collective mind state
-\newcommand{\bM}[2]{{#1}_{#2}} % Mental state indices
-\newcommand{\bFM}[2]{({#1}_{#2})} % Mental field indices
-\newcommand{\God}{\mathfrak{G}} % God
-
-% Symbols
-\newcommand{\ExcitedAtom}{$\vcenter{\hbox{\includegraphics[height=.6cm]{images/pictures/atom.pdf}}}$} % Excited atom
-\newcommand{\DetectorOff}{$\vcenter{\hbox{\includegraphics[height=.6cm]{images/pictures/bulb_off.pdf}}}$} % Detector off (waiting)
-\newcommand{\DetectorOn}{$\vcenter{\hbox{\includegraphics[height=.6cm]{images/pictures/bulb_on.pdf}}}$} % Detector on (activated)
-\newcommand{\Atom}{$\vcenter{\hbox{\includegraphics[height=.4cm]{images/pictures/atom.pdf}}}$} % Atom
-\newcommand{\Photon}{$\vcenter{\hbox{\includegraphics[height=.6cm,angle=-90,origin=c]{images/diagrams/Photon.pdf}}}$} % Photon
-\newcommand{\ObserverOff}{$\vcenter{\hbox{\huge\textit?}}$} % Observer off (waiting)
-\newcommand{\ObserverOn}{$\vcenter{\hbox{\huge\textit!}}$} % Observer on (having observed the expected result)
-\newcommand{\Superposition}{$\vcenter{\hbox{\huge+}}$} % Quantum superposition
+\input{notations}
 
 \frontmatter
 
-\thispagestyle{empty}
+\input{title-page}
 
-\null
-\vfill
-\begin{center}
-{\Huge \textbf{Quantum\\Ethics}}
-\vskip 1.2cm
-A Spinozist Interpretation \\
-of Quantum Field Theory
-\vskip 2cm
-{\large Sébastien Fauvel}
-\end{center}
-\vfill
-\null
+\input{copyright}
 
-\newpage
+\input{acknowledgements}
 
-\null
-\vfill
-\noindent{\small Copyright © 2013 Sébastien Fauvel \\
-\\
-Cover image: Hubble telescope image of the Carina Nebula, 2007.\\
-Photograph: NASA, ESA, N. Smith (University of California, Berkeley), and The Hubble Heritage Team (STScI/AURA).}
-
-\cleardoublepage
-\section*{Acknowledgements}
-
-First and foremost, I would like to thank my wife Angela for having let me enjoy her wisdom and love radiating being for all these years. She made me discover Spinoza's philosophy and this publication would never have been possible without the help of her brilliant intelligence, of her constructive criticism, of all her love and support. Thank you!
-
-I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for some fruitful discussions that did much for my understanding of Physics, my teachers Christian Swit and Stéphane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted ``godfather'' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age. They all did very much for my personal evolution.
-
-\cleardoublepage
-\section*{Preface}
-
-This book has been written with the main concern of providing the scientific community with a mean of building a bridge between physicists and philosophers in the field of Quantum Physics. It defines a common language to describe the realm of our experience of the world and I truly hope that this new language will find a large audience in both communities. For physicists, it stresses the importance of developing a well-defined mathematical formalism for Quantum Field Theory, since this is the necessary condition for philosophers to identify the underlying ontology, which builds the base of every philosophical discourse on the implications of Quantum Physics. The development of a coherent, convincing discourse by philosophers builds in turn the ground on which every conceptually and technically correct vulgarization effort can foot, and contributes thereby to broaden the popularity and acceptance of Quantum Physics through the whole society and especially among prospective students. Philosophers, on the other hand, gain a mean of confronting their ideas with the latest insights into fundamental physics, of expressing these ideas in terms of naturalistically grounded metaphysics and of articulating speculative thoughts in the uncertainty zones remaining within the physical theory itself or inherent to it.
-
-The careful reader already familiar with Quantum Physics will find here the very first mathematically well-defined formulation of Quantum Field Theory coming along with an intellectually satisfactory interpretation, perfectly capable of explaining all known quantum phenomena, and I am very pleased to present it to your curiosity today! However, although you will find, in the first edition of this book, all the main ideas I wanted to develop here, there still are a few areas which I couldn't yet find the time to develop to the extend they would have deserved. For instance, I do consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, although it obviously lacks to respect the heuristical principles of Gauge and Poincaré invariance on which any textbook introduction to Quantum Field Theory relies. I included a few calculation examples in order to demonstrate that, at usual energy and distance scales, the resulting physics is the same as expected, but it would have been useful, to convince the skeptical reader, to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model. The philosophical aspects of this book might have deserved a more extensive treatment, too. I have given a few basic examples to show how the physical theory can be used as a reference language in order to express philosophical questions, but I would have to add more various examples to give an adequate idea of the potential of this method.
-
-I am preparing a second, augmented edition of this work so that the ideas presented here become more explicit and accessible to a broader public. For the time being, I wish you a fruitful and enjoyable reading as well as long hours of delightful meditation!
-
-\begin{flushright}
-\begin{tabular}{l}
-January, 2013\\
-Sébastien Fauvel
-\end{tabular}
-\end{flushright}
+\input{preface}
 
 \cleardoublepage
 \tableofcontents
@@ -1867,13 +1580,3 @@ where we used the shorthand notations $\beta \eqdef \bkn \pt \q$ and $\beta' \eq
 \end{thebibliography}
 
 %\printindex
-
-\end{document}
-
-% Back cover
-
-%This groundbreaking work is bringing together quantum physicists and philosophers in an unprecedented way... Making a tabula rasa from all its historical and heuristical developments, it presents Quantum Field Theory in its modern form in a exquisitely simple mathematical apparatus, nonetheless completely well-defined and fully functional... Focusing on the underlying ontology of Quantum Field Theory, which turns out to be very similar to the classical metaphysics of Spinoza's Ethics, it provides a solid fundament for any philosophical discussion of its interpretation.
-%This book ought to become compulsory reading not only for all philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all physicists working on the foundations of Physics, on Quantum Measurement and on Decoherence Theory.
-
-%About the author:
-%Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative Literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basel.
