Prefixed file names with 'frontmatter'

--- a/contents.tex
+++ b/contents.tex
@@ -1,14 +1,12 @@
-\input{notations}
-
 \frontmatter
 
-\input{title-page}
+\input{frontmatter-title-page}
 
-\input{copyright}
+\input{frontmatter-copyright}
 
-\input{acknowledgements}
+\input{frontmatter-acknowledgements}
 
-\input{preface}
+\input{frontmatter-preface}
 
 \cleardoublepage
 \tableofcontents
